# asteroids

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.ai/task/: 01-bootstrap-casco.md  02-dominio-world-da-nave.md  03-asteroides-e-colisao.md  04-vidas-pontuacao-gameover.md  05-recordes.md  06-renderizacao-wireframe.md  README.md
src/: main_theforge.cpp
src/asteroids/game/: GameRouter.h  Record.h  World.cpp  World.h
src/asteroids/game/service/: PlaySession.h  RecordService.cpp  RecordService.h
src/asteroids/game/service/repository/: FileRecordRepository.cpp  FileRecordRepository.h  RecordRepository.h
src/asteroids/game/state/: StateGame.h  StateGameFlow.h
src/platform/theforge/PC_VS2019/: AsteroidsForge.sln  AsteroidsForge.vcxproj
src/platform/theforge/src/AsteroidsForge/: ForgeSceneFactory.cpp  ForgeSceneFactory.h  PathStatement.txt
src/platform/theforge/src/AsteroidsForge/GPUCfg/: gpu.cfg
src/platform/theforge/src/AsteroidsForge/scene/: ForgeExitScene.h  ForgeGameOverScene.cpp  ForgeGameOverScene.h  ForgeGameScene.cpp  ForgeGameScene.h  ForgeMenuScene.cpp  ForgeMenuScene.h  ForgeRecordsScene.cpp  ForgeRecordsScene.h  ForgeSplashScene.cpp  ForgeSplashScene.h
test/: CMakeLists.txt
test/asteroids/game/: WorldTest.cpp
test/asteroids/game/service/: RecordServiceTest.cpp
test/asteroids/game/service/repository/: FileRecordRepositoryTest.cpp
